# infra-ingest

./: .env.example  .env.local.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt  run  run.command
.github/workflows/: tests.yml
app/: README.md  launcher.sh  ui_preview.html  whisper_gui.py
docs/: ARCHITECTURE.md  CASE_STUDY.md  MODELS_AND_AGENTS.md  index.html
evals/: mini_eval.jsonl
examples/: input.txt  output.md  sample_report.html
scripts/: doctor.sh  run_eval.py  run_example.sh  sync_app.sh  test.sh
site/: index.html
src/infra_ingest/: __init__.py  backtest.py  cli.py  config.py  converters.py  document_parser.py  entities.py  finance.py  glossary.py  graph.py  library.py  llm_client.py  manifest.py  material_parser.py  note_writer.py  pipeline.py  prompts.py  quant_data.py  rag.py  raw_archive.py  research_runs.py  sources.py  structured_note.py  transcriber.py  transcript.py
tests/: test_backtest.py  test_config.py  test_entities.py  test_finance.py  test_glossary.py  test_graph_raw_material_llm.py  test_library.py  test_note_writer.py  test_pipeline.py  test_rag.py  test_research_runs.py  test_sources.py  test_structured_note.py  test_transcript.py
